Resolves: tdf#146994 InitOwnBlockMode() with current mark range or cursor pos

This sets specifically the end position to the correct value. The
start position and dependent logic if meBlockMode==Own is
re-initialized in MarkCursor() via InitBlockMode(). Unfortunately
that (calling MarkCursor()) happens after the end position was
incremented in ExpandBlock(), previous with the wrong values.

This new own block mode init now also makes it possible to
expand/shrink the marked range after a paste or undo/redo, as it
would be expected for any existing selection.

Change-Id: Id26e4aa32896ec0c714e33b99dbf6702df144995